--- a/cloudFormation/gatewayTest.yaml
+++ b/cloudFormation/gatewayTest.yaml
@@ -4,8 +4,8 @@ Description: CloudFormation template for the entire AWS API Gateway Stack
 Parameters:
   lambdaARNTemplate:
     Type: String
-    Default: "arn:aws:lambda:us-east-1:855430746673:function:"
-    # Default: "arn:aws:lambda:us-west-2:169748077841:function:"
+    # Default: "arn:aws:lambda:us-east-1:855430746673:function:"
+    Default: "arn:aws:lambda:us-west-2:169748077841:function:"
   associateLambdaName:
     Type: String
     Default: associate
@@ -20,7 +20,7 @@ Parameters:
     Default: batchassociates
   qcWeekLambdaName:
     Type: String
-    Default: qcweek
+    Default: batchWeekLambda
   qcCategoriesLambdaName:
     Type: String
     Default: qccategories
@@ -35,15 +35,16 @@ Resources:
     Properties:
         Description: Root endpoint for the Caliber Mobile application
         Name: caliber-mobile-api-cf
-  # Authorizer
-  # Type: AWS::ApiGateway::Authorizer
-  #   Properties:
-  #     AuthorizerResultTtlInSeconds: '0'
-  #     AuthorizerUri: !Sub
-  #         - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-  #         - lambdaArn:
-  #     RestApiId: !Ref apiGateway
-  #     Type: TOKEN
+  Authorizer:
+    Type: AWS::ApiGateway::Authorizer
+    Properties:
+      Name: calibermobileauthorizer
+      AuthorizerResultTtlInSeconds: '0'
+      AuthorizerUri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref fireBaseLambdaName]]
+      RestApiId: !Ref apiGateway
+      Type: TOKEN
 
 # ------------------------------------------- Batches Feature ------------------------------------------- #
 
@@ -65,7 +66,7 @@ Resources:
         Ref: apiGateway
       ResourceId:
         Ref: batchesResource
-      HttpMethod: OPTIONS
+      HttpMethod: ANY
       Integration:
         IntegrationResponses:
         - StatusCode: 200
@@ -78,12 +79,12 @@ Resources:
         PassthroughBehavior: WHEN_NO_MATCH
         RequestTemplates:
           application/json: '{"statusCode": 200}'
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref batchesLambdaName]]
+        # Type: MOCK
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref batchesLambdaName]]
       MethodResponses:
       - StatusCode: 200
         ResponseModels:
@@ -126,12 +127,12 @@ Resources:
         PassthroughBehavior: WHEN_NO_MATCH
         RequestTemplates:
           application/json: '{"statusCode": 200}'
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref categoriesLambdaName]]
+        # Type: MOCK
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref categoriesLambdaName]]
       MethodResponses:
       - StatusCode: 200
         ResponseModels:
@@ -159,7 +160,7 @@ Resources:
         Ref: apiGateway
       ResourceId:
         Ref: categoryIdResource
-      HttpMethod: OPTIONS
+      HttpMethod: ANY
       Integration:
         IntegrationResponses:
         - StatusCode: 200
@@ -172,12 +173,12 @@ Resources:
         PassthroughBehavior: WHEN_NO_MATCH
         RequestTemplates:
           application/json: '{"statusCode": 200}'
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref categoriesLambdaName]]
+        # Type: MOCK
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref categoriesLambdaName]]
       MethodResponses:
       - StatusCode: 200
         ResponseModels:
@@ -235,12 +236,12 @@ Resources:
         PassthroughBehavior: WHEN_NO_MATCH
         RequestTemplates:
           application/json: '{"statusCode": 200}'
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref batchAssociatesLambdaName]]
+        # Type: MOCK
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref batchAssociatesLambdaName]]
       MethodResponses:
       - StatusCode: 200
         ResponseModels:
@@ -478,12 +479,12 @@ Resources:
         PassthroughBehavior: WHEN_NO_MATCH
         RequestTemplates:
           application/json: '{"statusCode": 200}'
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn: !Join ["",["arn:aws:lambda:", !Sub "${AWS::Region}", ":", !Sub "${AWS::AccountId}", ":function:", !Ref associateLambdaName]]
+        # Type: MOCK
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",["arn:aws:lambda:", !Sub "${AWS::Region}", ":", !Sub "${AWS::AccountId}", ":function:", !Ref associateLambdaName]]
       MethodResponses:
       - StatusCode: 200
         ResponseModels:
@@ -504,21 +505,22 @@ Resources:
       - qcWeeksOptionsMethod
       - qcCategoriesOptionsMethod
       - qcAssociateMethod
+      - Authorizer
     Properties:
       RestApiId: !Ref apiGateway
       StageName: default
-  # InvokeBatchesLambda:
-  #   Type: AWS::Lambda::Permission
-  #   Properties:
-  #     Action: lambda:InvokeFunction
-  #     FunctionName: !Ref batchesLambdaName
-  #     Principal: apigateway.amazonaws.com
-  # InvokeCategoriesLambda:
-  #   Type: AWS::Lambda::Permission
-  #   Properties:
-  #     Action: lambda:InvokeFunction
-  #     FunctionName: !Ref categoriesLambdaName
-  #     Principal: apigateway.amazonaws.com
+  InvokeBatchesLambda:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref batchesLambdaName
+      Principal: apigateway.amazonaws.com
+  InvokeCategoriesLambda:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref categoriesLambdaName
+      Principal: apigateway.amazonaws.com
   # InvokeQCWeekLambda:
   #   Type: AWS::Lambda::Permission
   #   Properties:
@@ -531,24 +533,24 @@ Resources:
   #     Action: lambda:InvokeFunction
   #     FunctionName: !Ref qcCategoriesLambdaName
   #     Principal: apigateway.amazonaws.com
-  # InvokeAssociatesLambda:
-  #   Type: AWS::Lambda::Permission
-  #   Properties:
-  #     Action: lambda:InvokeFunction
-  #     FunctionName: !Ref associateLambdaName
-  #     Principal: apigateway.amazonaws.com
-  # InvokeBatchAssociatesLambda:
-  #   Type: AWS::Lambda::Permission
-  #   Properties:
-  #     Action: lambda:InvokeFunction
-  #     FunctionName: !Ref batchAssociatesLambdaName
-  #     Principal: apigateway.amazonaws.com
-  # InvokeFirebaseLambda:
-  #   Type: AWS::Lambda::Permission
-  #   Properties:
-  #     Action: lambda:InvokeFunction
-  #     FunctionName: !Ref fireBaseLambdaName
-  #     Principal: apigateway.amazonaws.com
+  InvokeAssociatesLambda:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref associateLambdaName
+      Principal: apigateway.amazonaws.com
+  InvokeBatchAssociatesLambda:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref batchAssociatesLambdaName
+      Principal: apigateway.amazonaws.com
+  InvokeFirebaseLambda:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref fireBaseLambdaName
+      Principal: apigateway.amazonaws.com
 Outputs:
   apiGatewayInvokeUrl:
     Value: !Sub https://${apiGateway}.execute-api.${AWS::Region}.amazonaws.com/default
