--- a/cloudFormation/gatewayTest.yaml
+++ b/cloudFormation/gatewayTest.yaml
@@ -45,6 +45,7 @@ Resources:
           - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref fireBaseLambdaName]]
       RestApiId: !Ref apiGateway
       Type: TOKEN
+      IdentitySource: method.request.header.Authorization
 
 # ------------------------------------------- Batches Feature ------------------------------------------- #
 
@@ -79,11 +80,6 @@ Resources:
         PassthroughBehavior: WHEN_NO_MATCH
         RequestTemplates:
           application/json: '{"statusCode": 200}'
-        RequestParameters:
-          method.request.querystring.year: true
-          method.request.querystring.trainer: true
-          method.request.querystring.trainerEmail: true
-          method.request.path.query: true
         # Type: MOCK
         Type: AWS_PROXY
         IntegrationHttpMethod: POST
