--- a/cloudFormation/oldgateway.yaml
+++ b/cloudFormation/oldgateway.yaml
@@ -1,6 +1,33 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: CloudFormation template for the entire AWS API Gateway Stack
 
+Parameters:
+  lambdaARNTemplate:
+    Type: String
+    # Default: "arn:aws:lambda:us-east-1:855430746673:function:"
+    Default: "arn:aws:lambda:us-west-2:169748077841:function:"
+  associateLambdaName:
+    Type: String
+    Default: associate
+  batchesLambdaName:
+    Type: String
+    Default: batches
+  categoriesLambdaName:
+    Type: String
+    Default: categories
+  batchAssociatesLambdaName:
+    Type: String
+    Default: batchassociates
+  qcWeekLambdaName:
+    Type: String
+    Default: batchWeekLambda
+  qcCategoriesLambdaName:
+    Type: String
+    Default: qccategories
+  fireBaseLambdaName:
+    Type: String
+    Default: firebaselambda
+
 Resources:
   # API Gateway
   apiGateway:
@@ -9,16 +36,17 @@ Resources:
         Description: Root endpoint for the Caliber Mobile application
         Name: caliber-mobile-api-cf
   # Authorizer
-  Authorizer:
-    Type: AWS::ApiGateway::Authorizer
-    Properties:
-      AuthorizerResultTtlInSeconds: '0'
-      AuthorizerUri: !Sub
-          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn: 
-      RestApiId: !Ref apiGateway
-      Name: DefaultAuthorizer
-      Type: TOKEN
+  # Authorizer:
+  #   Type: AWS::ApiGateway::Authorizer
+  #   Properties:
+  #     Name: calibermobileauthorizer
+  #     AuthorizerResultTtlInSeconds: '0'
+  #     AuthorizerUri: !Sub
+  #         - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+  #         - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref fireBaseLambdaName]]
+  #     RestApiId: !Ref apiGateway
+  #     Type: TOKEN
+  #     IdentitySource: method.request.header.Authorization
 
 # ------------------------------------------- Batches Feature ------------------------------------------- #
 
@@ -72,7 +100,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn:
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref batchesLambdaName]]
       ResourceId: !Ref batchesResource
       RestApiId: !Ref apiGateway
 # ------------------------------------------- Categories Feature ------------------------------------------- #
@@ -127,7 +155,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn: arn:aws:lambda:us-east-1:855430746673:function:categories
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref categoriesLambdaName]]
       ResourceId: !Ref categoriesResource
       RestApiId: !Ref apiGateway
   # POST method for /categories
@@ -142,7 +170,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn: arn:aws:lambda:us-east-1:855430746673:function:categories
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref categoriesLambdaName]]
       ResourceId: !Ref categoriesResource
       RestApiId: !Ref apiGateway
   # API Gateway Resource - /categories/{categoryId}
@@ -197,7 +225,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn: arn:aws:lambda:us-east-1:855430746673:function:categories
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref categoriesLambdaName]]
 
 # ------------------------------------------------------------------------------------------------------ #
 
@@ -265,7 +293,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn:
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref batchAssociatesLambdaName]]
       ResourceId: !Ref qcBatchResource
       RestApiId: !Ref apiGateway
 # ------------------------------------------- qcWeek Feature ------------------------------------------- #
@@ -320,7 +348,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn:
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref qcWeekLambdaName]]
       ResourceId: !Ref qcWeeksResource
       RestApiId: !Ref apiGateway
   # POST method for /qc/batches/{batchId}/weeks
@@ -335,7 +363,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn:
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref qcWeekLambdaName]]
       ResourceId: !Ref qcWeeksResource
       RestApiId: !Ref apiGateway
   # API Gateway Resource - /qc/batches/{batchId}/weeks/{week}
@@ -388,7 +416,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn:
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref qcWeekLambdaName]]
       ResourceId: !Ref qcWeekResource
       RestApiId: !Ref apiGateway
 
@@ -444,7 +472,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn:
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref qcCategoriesLambdaName]]
       ResourceId: !Ref qcCategoriesResource
       RestApiId: !Ref apiGateway
   # POST method for qc/batches/{batchId}/weeks/{week}/categories
@@ -459,7 +487,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn:
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref qcCategoriesLambdaName]]
       ResourceId: !Ref qcCategoriesResource
       RestApiId: !Ref apiGateway
   # API Gateway Resource - /qc/batches/{batchId}/weeks/{week}/categories/{categoryId}
@@ -512,7 +540,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn:
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref qcCategoriesLambdaName]]
       ResourceId: !Ref qcCategoryResource
       RestApiId: !Ref apiGateway
 
@@ -575,7 +603,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn:
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref associateLambdaName]]
       ResourceId: !Ref qcAssociateResource
       RestApiId: !Ref apiGateway
   # PUT method for /qc/batches/{batchId}/weeks/{week}/associates/{associateId}
@@ -590,7 +618,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn:
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref associateLambdaName]]
       ResourceId: !Ref qcAssociateResource
       RestApiId: !Ref apiGateway
   # PATCH method for /qc/batches/{batchId}/weeks/{week}/associates/{associateId}
@@ -605,7 +633,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn:
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref associateLambdaName]]
       ResourceId: !Ref qcAssociateResource
       RestApiId: !Ref apiGateway
 
@@ -634,74 +662,44 @@ Resources:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName:
+      FunctionName: !Ref batchesLambdaName
       Principal: apigateway.amazonaws.com
   InvokeCategoriesLambda:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName: arn:aws:lambda:us-east-1:855430746673:function:categories
+      FunctionName: !Ref categoriesLambdaName
       Principal: apigateway.amazonaws.com
-  InvokeQCWeekLambda:
-    Type: AWS::Lambda::Permission
-    Properties:
-      Action: lambda:InvokeFunction
-      FunctionName:
-      Principal: apigateway.amazonaws.com
-  InvokeQCCategoriesLambda:
-    Type: AWS::Lambda::Permission
-    Properties:
-      Action: lambda:InvokeFunction
-      FunctionName:
-      Principal: apigateway.amazonaws.com
+  # InvokeQCWeekLambda:
+  #   Type: AWS::Lambda::Permission
+  #   Properties:
+  #     Action: lambda:InvokeFunction
+  #     FunctionName: !Ref qcWeekLambdaName
+  #     Principal: apigateway.amazonaws.com
+  # InvokeQCCategoriesLambda:
+  #   Type: AWS::Lambda::Permission
+  #   Properties:
+  #     Action: lambda:InvokeFunction
+  #     FunctionName: !Ref qcCategoriesLambdaName
+  #     Principal: apigateway.amazonaws.com
   InvokeAssociatesLambda:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName:
+      FunctionName: !Ref associateLambdaName
       Principal: apigateway.amazonaws.com
   InvokeBatchAssociatesLambda:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName:
+      FunctionName: !Ref batchAssociatesLambdaName
       Principal: apigateway.amazonaws.com
   InvokeFirebaseLambda:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName:
+      FunctionName: !Ref fireBaseLambdaName
       Principal: apigateway.amazonaws.com
-  LambdaIAMRole:
-      Type: AWS::IAM::Role
-      Properties:
-        AssumeRolePolicyDocument:
-          Version: 2012-10-17
-          Statement:
-            - Action:
-                - sts:AssumeRole
-              Effect: Allow
-              Principal:
-                Service:
-                  - lambda.amazonaws.com
-        Policies:
-          - PolicyDocument:
-              Version: 2012-10-17
-              Statement:
-                - Action:
-                    - logs:CreateLogGroup
-                    - logs:CreateLogStream
-                    - logs:PutLogEvents
-                  Effect: Allow
-                  Resource:
-                    - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/categoriesLambda:*
-            PolicyName: lambda-cf
-  # Create our log group
-  LambdaLogGroup:
-    Type: AWS::Logs::LogGroup
-    Properties:
-      LogGroupName: /aws/lambda/categoriesLambda-cf
-      RetentionInDays: 90
 Outputs:
   apiGatewayInvokeUrl:
     Value: !Sub https://${apiGateway}.execute-api.${AWS::Region}.amazonaws.com/default
