--- a/authorizer/new.yaml
+++ b/authorizer/new.yaml
@@ -4,7 +4,7 @@ Description: CloudFormation template for the entire AWS API Gateway Stack
 Parameters:
   lambdaARNTemplate:
     Type: String
-    Default: 'arn:aws:lambda:us-west-2:846663386575:function:'
+    Default: "arn:aws:lambda:us-east-1:855430746673:function:"
   associateLambdaName:
     Type: String
     Default: associate
@@ -27,9 +27,6 @@ Parameters:
     Type: String
     Default: firebaselambda
 
-AWSTemplateFormatVersion: 2010-09-09
-Description: CloudFormation template for the entire AWS API Gateway Stack
-
 Resources:
   # API Gateway
   apiGateway:
@@ -37,16 +34,15 @@ Resources:
     Properties:
       Description: Root endpoint for the Caliber Mobile application
       Name: caliber-mobile-api-cf
-  # Authorizer
   Authorizer:
     Type: AWS::ApiGateway::Authorizer
     Properties:
+      Name: firebaselambda
       AuthorizerResultTtlInSeconds: '0'
       AuthorizerUri: !Sub
         - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
         - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref fireBaseLambdaName]]
       RestApiId: !Ref apiGateway
-      Name: firebaselambda
       Type: TOKEN
       IdentitySource: method.request.header.Authorization
 
@@ -98,12 +94,11 @@ Resources:
       AuthorizerId: !Ref Authorizer
       HttpMethod: GET
       Integration:
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref batchesLambdaName]]
       ResourceId: !Ref batchesResource
       RestApiId: !Ref apiGateway
 # ------------------------------------------- Categories Feature ------------------------------------------- #
@@ -169,12 +164,11 @@ Resources:
       AuthorizerId: !Ref Authorizer
       HttpMethod: POST
       Integration:
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref categoriesLambdaName]]
       ResourceId: !Ref categoriesResource
       RestApiId: !Ref apiGateway
   # API Gateway Resource - /categories/{categoryId}
@@ -225,12 +219,11 @@ Resources:
       AuthorizationType: CUSTOM
       AuthorizerId: !Ref Authorizer
       Integration:
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref categoriesLambdaName]]
 
 # ------------------------------------------------------------------------------------------------------ #
 
@@ -294,12 +287,11 @@ Resources:
       AuthorizerId: !Ref Authorizer
       HttpMethod: GET
       Integration:
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref batchAssociatesLambdaName]]
       ResourceId: !Ref qcBatchResource
       RestApiId: !Ref apiGateway
 # ------------------------------------------- qcWeek Feature ------------------------------------------- #
@@ -346,16 +338,16 @@ Resources:
   getWeeksMethod:
     Type: AWS::ApiGateway::Method
     Properties:
-      AuthorizationType: CUSTOM
-      AuthorizerId: !Ref Authorizer
+      AuthorizationType: NONE
+      # AuthorizationType: CUSTOM
+      # AuthorizerId: !Ref Authorizer
       HttpMethod: GET
       Integration:
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref qcWeekLambdaName]]
       ResourceId: !Ref qcWeeksResource
       RestApiId: !Ref apiGateway
   # POST method for /qc/batches/{batchId}/weeks
@@ -366,12 +358,11 @@ Resources:
       AuthorizerId: !Ref Authorizer
       HttpMethod: POST
       Integration:
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref qcWeekLambdaName]]
       ResourceId: !Ref qcWeeksResource
       RestApiId: !Ref apiGateway
   # API Gateway Resource - /qc/batches/{batchId}/weeks/{week}
@@ -420,12 +411,11 @@ Resources:
       AuthorizerId: !Ref Authorizer
       HttpMethod: POST
       Integration:
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref qcWeekLambdaName]]
       ResourceId: !Ref qcWeekResource
       RestApiId: !Ref apiGateway
 
@@ -482,7 +472,7 @@ Resources:
         # IntegrationHttpMethod: POST
         # Uri: !Sub
         #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn:
+        #   - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref qcCategoriesLambdaName]]
       ResourceId: !Ref qcCategoriesResource
       RestApiId: !Ref apiGateway
   # POST method for qc/batches/{batchId}/weeks/{week}/categories
@@ -498,7 +488,7 @@ Resources:
         # IntegrationHttpMethod: POST
         # Uri: !Sub
         #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn:
+        #   - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref qcCategoriesLambdaName]]
       ResourceId: !Ref qcCategoriesResource
       RestApiId: !Ref apiGateway
   # API Gateway Resource - /qc/batches/{batchId}/weeks/{week}/categories/{categoryId}
@@ -552,7 +542,7 @@ Resources:
         # IntegrationHttpMethod: POST
         # Uri: !Sub
         #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn:
+        #   - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref qcCategoriesLambdaName]]
       ResourceId: !Ref qcCategoryResource
       RestApiId: !Ref apiGateway
 
@@ -562,16 +552,16 @@ Resources:
   qcAssociatesResource:
     Type: AWS::ApiGateway::Resource
     Properties:
-      RestApiId: !Ref apiGateway
-      ParentId: !Ref qcWeekResource
-      PathPart: associates
+        RestApiId: !Ref apiGateway
+        ParentId: !Ref qcWeekResource
+        PathPart: associates
   # API Gateway Resource - /qc/batches/{batchId}/weeks/{week}/associates/{associateId}
   qcAssociateResource:
     Type: AWS::ApiGateway::Resource
     Properties:
-      RestApiId: !Ref apiGateway
-      ParentId: !Ref qcAssociatesResource
-      PathPart: '{associateId}'
+        RestApiId: !Ref apiGateway
+        ParentId: !Ref qcAssociatesResource
+        PathPart: '{associateId}'
   # CORS for /qc/batches/{batchId}/weeks/{week}/associates/{associateId}
   qcAssociatesOptionsMethod:
     Type: AWS::ApiGateway::Method
@@ -611,12 +601,11 @@ Resources:
       AuthorizerId: !Ref Authorizer
       HttpMethod: GET
       Integration:
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref associateLambdaName]]
       ResourceId: !Ref qcAssociateResource
       RestApiId: !Ref apiGateway
   # PUT method for /qc/batches/{batchId}/weeks/{week}/associates/{associateId}
@@ -627,12 +616,11 @@ Resources:
       AuthorizerId: !Ref Authorizer
       HttpMethod: PUT
       Integration:
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref associateLambdaName]]
       ResourceId: !Ref qcAssociateResource
       RestApiId: !Ref apiGateway
   # PATCH method for /qc/batches/{batchId}/weeks/{week}/associates/{associateId}
@@ -643,12 +631,11 @@ Resources:
       AuthorizerId: !Ref Authorizer
       HttpMethod: PATCH
       Integration:
-        Type: MOCK
-        # Type: AWS_PROXY
-        # IntegrationHttpMethod: POST
-        # Uri: !Sub
-        #   - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-        #   - lambdaArn:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join ["",[!Ref lambdaARNTemplate, !Ref associateLambdaName]]
       ResourceId: !Ref qcAssociateResource
       RestApiId: !Ref apiGateway
 
@@ -677,7 +664,7 @@ Resources:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName: ["",[!Ref lambdaARNTemplate, !Ref batchesLambdaName]]
+      FunctionName: !Join ["",[!Ref lambdaARNTemplate, !Ref batchesLambdaName]]
       Principal: apigateway.amazonaws.com
   InvokeCategoriesLambda:
     Type: AWS::Lambda::Permission
@@ -695,19 +682,19 @@ Resources:
   #   Type: AWS::Lambda::Permission
   #   Properties:
   #     Action: lambda:InvokeFunction
-  #     FunctionName:
+  #     FunctionName: !Ref qcCategoriesLambdaName
   #     Principal: apigateway.amazonaws.com
   InvokeAssociatesLambda:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName: ["",[!Ref lambdaARNTemplate, !Ref associatesLambdaName]]
+      FunctionName: !Join ["",[!Ref lambdaARNTemplate, !Ref associateLambdaName]]
       Principal: apigateway.amazonaws.com
   InvokeBatchAssociatesLambda:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName: ["",[!Ref lambdaARNTemplate, !Ref batchAssociatesLambdaName]]
+      FunctionName: !Join ["",[!Ref lambdaARNTemplate, !Ref batchAssociatesLambdaName]]
       Principal: apigateway.amazonaws.com
   InvokeFirebaseLambda:
     Type: AWS::Lambda::Permission
@@ -715,36 +702,6 @@ Resources:
       Action: lambda:InvokeFunction
       FunctionName: !Join ["",[!Ref lambdaARNTemplate, !Ref fireBaseLambdaName]]
       Principal: apigateway.amazonaws.com
-  # LambdaIAMRole:
-  #   Type: AWS::IAM::Role
-  #   Properties:
-  #     AssumeRolePolicyDocument:
-  #       Version: 2012-10-17
-  #       Statement:
-  #         - Action:
-  #             - sts:AssumeRole
-  #           Effect: Allow
-  #           Principal:
-  #             Service:
-  #               - lambda.amazonaws.com
-  #     Policies:
-  #       - PolicyDocument:
-  #           Version: 2012-10-17
-  #           Statement:
-  #             - Action:
-  #               - logs:CreateLogGroup
-  #               - logs:CreateLogStream
-  #               - logs:PutLogEvents
-  #               Effect: Allow
-  #               Resource:
-  #                 - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/categoriesLambda:*
-  #           PolicyName: lambda-cf
-  # # Create our log group
-  # LambdaLogGroup:
-  #   Type: AWS::Logs::LogGroup
-  #   Properties:
-  #     LogGroupName: /aws/lambda/categoriesLambda-cf
-  #     RetentionInDays: 90
 Outputs:
   apiGatewayInvokeUrl:
     Value: !Sub https://${apiGateway}.execute-api.${AWS::Region}.amazonaws.com/default
