Final Files All Completed WeekCategories Cloud Formation Completed

--- a/WeekCategories/cloudFormation/qcweekCaetgories.yaml
+++ b/WeekCategories/cloudFormation/qcweekCaetgories.yaml
@@ -1,15 +1,15 @@
 # Make the associate lambda from an existingimage
 AWSTemplateFormatVersion: 2010-09-09
-Description: lambda for weekCategories lambda
+Description: lambda for weekcategories-lambda
 Resources:
   BatchesLambda:
     Type: AWS::Lambda::Function
     Properties:
-      FunctionName: weekCategories
+      FunctionName: weekcategories-lambda
       Role:
         arn:aws:iam::855430746673:role/caliber-mobile-cf
       Code:
-        ImageUri: !Join ["/",[!Join [".",[!Sub "${AWS::AccountId}", "dkr", "ecr", !Sub "${AWS::Region}", "amazonaws", "com"]], "weekCategories:latest"]]
+        ImageUri: !Join ["/",[!Join [".",[!Sub "${AWS::AccountId}", "dkr", "ecr", !Sub "${AWS::Region}", "amazonaws", "com"]], "weekcategories-lambda:latest"]]
       Timeout: 5
       PackageType: "Image"
 
