--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@babel/preset-env": "^7.12.11",
     "@types/cors": "^2.8.9",
     "@types/jest": "^26.0.20",
-    "@types/pg": "^7.14.9",
+    "@types/pg": "7.14.9",
     "aws-sdk-mock": "^5.1.0",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
