--- a/WeekCategories/package.json
+++ b/WeekCategories/package.json
@@ -7,8 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest",
-    "cov": "jest --coverage"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -34,10 +33,8 @@
     "@babel/preset-typescript": "^7.12.16"
   },
   "dependencies": {
-    "aws-sdk": "^2.852.0",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
-    "docker": "^1.0.0",
     "dotenv": "^8.2.0",
     "http-errors": "^1.8.0",
     "log4js": "^6.3.0",
