--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.16",
     "@types/cors": "^2.8.9",
     "@types/jest": "^26.0.20",
     "@types/pg": "^7.14.9",
@@ -30,8 +31,7 @@
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.1",
-    "typescript": "^4.1.5",
-    "@babel/preset-typescript": "^7.12.16"
+    "typescript": "^4.1.5"
   },
   "dependencies": {
     "aws-sdk": "^2.852.0",
