--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
-USER = username
-HOST = databasename.something.region.rds.amazonaws.com
-PASSWORD = somethingsecure
-DATABASE = databasename
+USER = "username"
+HOST = "databasename.something.region.rds.amazonaws.com"
+PASSWORD = "somethingsecure"
+DATABASE = "databasename"
