--- a/env.example
+++ b/env.example
@@ -3,3 +3,5 @@ USER=username
 HOST=databasename.something.region.rds.amazonaws.com
 PASSWORD=somethingsecure
 DATABASE=databasename
+REGION=us-east-1
+ACCOUNT=123456789
